<resources>
    <string name="app_name">The Penguin</string>
    <string name="password_label">Password</string>
    <string name="error_title">Error</string>
    <string name="error_network">Internet error</string>
    <string name="ok_title">OK</string>
    <string name="cancel_title">Cancel</string>
    <string name="permission_denied_by_user">You can\'t use this app without granting permission</string>
    <string name="gallery_label">Gallery</string>
    <string name="take_photo_label">Take photo</string>
    <string name="delete_label">Delete</string>

    <string name="online_label">Online</string>
    <string name="offline_label">Offline</string>
    <string name="connecting_label">Connecting…</string>
    <string name="avatar_change_label">Change avatar</string>

    <!-- Image Activity -->
    <string name="uploading_label">Uploading image…</string>
    <!-- Text Chat Activity -->
    <string name="message_input_hint">Your message</string>
    <string name="income_message_label">"Message from "</string>
    <string name="on_secret_chat_create">"Secret Chat Created with "</string>

    <!-- Login activity -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_new_account">New account</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This login is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_data">Login or password are incorrect</string>
    <string name="error_user_exist">Login already exist</string>

    <!-- UsersActivity -->
    <string name="income_call_label">"Call from "</string>
    <string name="outcome_call_label">Calling to </string>
    <string name="dialogs_label">Dialogs</string>
    <string name="logout_label">Logout</string>
    <string name="open_label">Open</string>
    <string name="close_label">Close</string>
    <string name="attachment_label">Attachment:</string>
    <string name="empty_dialogs_list">You don\'t have any dialogs yet. \n Use the search button to \n find your friends.
    </string>
    <string name="user_offline">This user is offline</string>

    <!-- Text Chat Action Bar -->
    <string name="title_activity_settings">Settings</string>
    <string name="copy_text">Copy</string>
    <string name="copy_successful">Text copied</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_image_quality">Image quality</string>
    <string-array name="pref_example_list_titles">
        <item>High</item>
        <item>Middle (recommended) </item>
        <item>Low</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>80</item>
        <item>50</item>
        <item>30</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="on_answer_wait">Waiting to the answer...</string>
</resources>
